# t5_japanese_dialogue_generation

./: README.md  pyproject.toml  t5_japanese_dialogue_generation.ipynb
t5_japanese_dialogue_generation/: T5FineTuner.py  TsvDataset.py  finetune.py  make_dataset.py  normalize_text.py  predict.py  prediction_result.csv  train.py
t5_japanese_dialogue_generation/content/data/: dev.tsv  test.tsv
t5_japanese_dialogue_generation/utils/: T5FineTuner.py  TsvDataset.py  __init__.py
